# spars_rover

./: CMakeLists.txt  README.md  package.xml  spars_two_planner_plugin.xml
include/spars_rover/: rover.h
src/: spars_rover.cpp
src/high_level_control/: clone_repos.sh
src/novatel/examples/NovatelData/: test1_rcvr1.ASC  test1_rcvr2.ASC  test2_rcvr1.ASC  test2_rcvr1_decompressed.ASC  test2_rcvr2.ASC
src/novatel/include/novatel/: novatel.h  novatel_enums.h  novatel_structures.h
src/novatel/src/: novatel.cpp
src/novatel/tests/test_data/: MorePropak.ASC  OnceEachAgain.ASC  OneEach.ASC  ParsingData.ASC  ParsingData2.ASC  PropakWithGlonass.ASC
src/roboteq/roboteq_driver/mbs/: script.hex  script.mbs
